@@ -26,14 +26,11 @@
 
 #include "Zank.h"
 
-bool accuse(int *actions, int climate);
+bool accuse(void);
 void showitems(void);
-/* void showpoliticians(int foundpolitician); */
-
 void tree(void);
 void wall(void);
 void lake(void);
-
 void showMap(bool Visited[X][Y]);
 void prompt(short pCtr, short iCtr);
 bool borderPatrol(void);
